crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0401_range_mixed_endpoints.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0401]: this is `char`, but the pattern requires `{integer}`
 --> mem:///main.lu:4:12
  |
4 |         0..'z' => 1,
  |            ^^^ found `char` here
  |            --- the pattern is here
  |
  = note: expected `{integer}`, found `char`
