crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0602_pattern_unknown_tag.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
warning[E0802]: this arm can never match — the arms above already cover it
  --> mem:///main.lu:12:13
   |
11 |             Io(_) => 1,
   |             ----- this arm already matches those values
12 |             Timeout => 2,
   |             ^^^^^^^ unreachable arm
   |
   = note: delete the arm, or reorder the arms so the more specific pattern comes first.
