crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0801_enum_witnesses.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0801]: this `match` does not cover `Green`, `Rgb(_, _, _)`
  --> mem:///main.lu:9:13
   |
 9 |     let v = match c {
   |             ^^^^^^^^^
10 |         Red => 0,
11 |     }
   | ^^^^^ not every value is matched
   |
   = note: add arms for the missing cases, or end the `match` with a `_` arm to catch the rest
     deliberately.
