crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0801_fallible_value_half.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0801]: this `match` does not cover `_` (the value half, `int`)
  --> mem:///main.lu:8:13
   |
 8 |     let r = match look(m, "a") {
   |             ^^^^^^^^^^^^^^^^^^^^
 9 |         none => -1,
10 |     }
   | ^^^^^ not every value is matched
   |
   = note: over a fallible value a row arm covers one tag of the row, a value pattern covers values
     of the ok type, and `_` covers whatever is left on both halves ([type.row.match]).
   = note: add arms for the missing cases, or end the `match` with a `_` arm to catch the rest
     deliberately.
