crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0801_guard_non_contribution.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0801]: this `match` does not cover `false`
 --> mem:///main.lu:3:13
  |
3 |     let v = match b {
  |             ^^^^^^^^^
4 |         true => 1,
5 |         false if b => 2,
6 |     }
  | ^^^^^ not every value is matched
  |
  = note: arms with `if` guards do not count toward coverage — a guard can be false.
  = note: add arms for the missing cases, or end the `match` with a `_` arm to catch the rest
    deliberately.
