crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0801_int_witness.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0801]: this `match` does not cover `2`
 --> mem:///main.lu:3:13
  |
3 |     let v = match n {
  |             ^^^^^^^^^
4 |         0 => 1,
5 |         1 => 2,
6 |     }
  | ^^^^^ not every value is matched
  |
  = note: add arms for the missing cases, or end the `match` with a `_` arm to catch the rest
    deliberately.
