crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0801_row_missing_tag.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0801]: this `match` does not cover `timeout`
  --> mem:///main.lu:13:9
   |
13 |         match err {
   |         ^^^^^^^^^^^
14 |             Io(_) => 1,
15 |         }
   | ^^^^^^^^^ not every value is matched
   |
   = note: add arms for the missing cases, or end the `match` with a `_` arm to catch the rest
     deliberately.
