crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0802_duplicate_literal.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
warning[E0802]: this arm can never match — the arms above already cover it
 --> mem:///main.lu:5:9
  |
4 |         1 => 1,
  |         - this arm already matches those values
5 |         1 => 2,
  |         ^ unreachable arm
  |
  = note: delete the arm, or reorder the arms so the more specific pattern comes first.
