crates/wolf_sema/tests/snapshots/pattern_diagnostics__e0802_literal_inside_earlier_range.snap
---
source: crates/wolf_sema/tests/pattern_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
warning[E0802]: this arm can never match — the arms above already cover it
 --> mem:///main.lu:5:9
  |
4 |         0..10 => 1,
  |         ----- this arm already matches those values
5 |         5 => 2,
  |         ^ unreachable arm
  |
  = note: delete the arm, or reorder the arms so the more specific pattern comes first.
